--- a/frontend/src/Pages/Admin/Approval/account.module.css
+++ b/frontend/src/Pages/Admin/Approval/account.module.css
@@ -3,8 +3,8 @@
 
     background-color: rgb(255, 255, 255);
     /* display: fixed; */
-    margin-top: 100px;
-    margin-left: 250px;
+    margin-top: 50px;
+    margin-left: 260px;
     box-shadow: 0px 3px 2px 0px #dbd6d6;
     height: 20px;
     height: fit-content;
@@ -94,20 +94,20 @@
 }
 
 .tableContainer {
-
     background-color: rgb(255, 255, 255);
     /* display: fixed; */
-    margin-top: -200px;
+ 
 
     box-shadow: 0px 3px 2px 0px #dbd6d6;
     height: fit-content;
 
 
 
-    width: 1610px;
-    margin-top: 290px;
-    margin-left: -1595px;
+    width: 1490px;
+    margin-top: 30px;
+    margin-left: 250px;;
     margin-bottom: 25px;
+
 
 }
 
