--- a/frontend/src/Pages/Admin/Dashboard2/account.module.css
+++ b/frontend/src/Pages/Admin/Dashboard2/account.module.css
@@ -1,15 +1,15 @@
 .container {
     /* min-width: 800px; */
 
-    background-color: rgb(255, 255, 255);
+    background-color:#e7e9eb;
     /* display: fixed; */
-    margin-top: 100px;
-    margin-left: 250px;
+    margin-top: 50px;
+    margin-left: 260px;
     box-shadow: 0px 3px 2px 0px #dbd6d6;
     height: 20px;
     height: fit-content;
 
-    width:1490px;
+    width:1590px;
 
     /* margin-left: 200px; */
 }
@@ -49,14 +49,14 @@
 .containertwo {
     /* min-width: 800px; */
 
-    background-color: rgb(255, 255, 255);
+    background-color:#e7e9eb;
     /* display: fixed; */
-    margin-top: 500px;
+    margin-top: 50px;
     margin-left: 250px;
-    box-shadow: 0px 3px 2px 0px #dbd6d6;
-    height: 20px;
+  
+    height: 0px;
     height: fit-content;
-    min-height: 150px;
+    min-height: 100px;
 
     width: 1590px;
 
@@ -94,20 +94,20 @@
 }
 
 .tableContainer {
-
     background-color: rgb(255, 255, 255);
     /* display: fixed; */
-    margin-top: -200px;
+ 
 
     box-shadow: 0px 3px 2px 0px #dbd6d6;
     height: fit-content;
 
 
 
-    width: 1610px;
-    margin-top: 290px;
-    margin-left: -1595px;
+    width: 1590px;
+    margin-top: 30px;
+    margin-left: 265px;;
     margin-bottom: 25px;
+
 
 }
 
